SimElec domestic electricity load profiler simulator

simelec-0.1.1 (25 April 2014)
===============================

 * Added support for Maven builds
 
 * Added an 'About' dialog to the UI

simelec-0.1.0 (15 April 2014)
===============================

 * Initial port of model from VBA/Excel to Java

 * Includes a basic JavaFX user interface